<resources>
    <string name="app_name">ChatApp</string>
    <string name="user_name">Name </string>
    <string name="type_connection">Type Connection</string>
    <string name="ok">Ok</string>
    <string name="field_name_is_empty">Field name is empty</string>
    <string name="send">Send</string>
    <string name="create_server">Create server</string>
    <string name="connect_to_server">Connect to server</string>
    <string name="your_ip">your IP</string>
    <string name="your_port">your_port</string>
    <string name="start_server">Start server</string>
    <string name="ip_servers">IP servers</string>
    <string name="port_servers">Port servers</string>
    <string name="connect">Connect</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="enable_connection_in_chat_session">Enable connection in chat session</string>
    <string name="go_to_the_dialogue_page">dialogue page</string>
    <string name="you_will_become_server_after_first_connection_client_to_your_device">you will become a server after the first connection of the client to your device</string>
    <string name="setup_current_connection">setup current connection</string>
    <string name="сontinue_to_work_after_leaving_the_program">Сontinue to work after leaving the program ?</string>
    <string name="disconnect">Disconnect</string>


</resources>
