<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="15"
        android:orientation="horizontal">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/connectedPeersRV"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="15" />
    </LinearLayout>

    <LinearLayout
        android:padding="@dimen/middle_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:gravity="center_horizontal"
            android:layout_margin="@dimen/middle_padding"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/enable_connection_in_chat_session" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/yes" />

            <RadioButton
                android:id="@+id/radioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/no" />

        </RadioGroup>
    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="bottom|center"
        android:orientation="vertical">

        <Button
            android:id="@+id/startServerBT"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:enabled="false"
            android:layout_weight="1"
            android:text="@string/you_will_become_server_after_first_connection_client_to_your_device" />

        <Button
            android:enabled="false"
            android:id="@+id/dialoguePageBT"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:text="@string/go_to_the_dialogue_page" />

    </LinearLayout>

</LinearLayout>
